# shiny-sniffle

./: .gitignore  Cargo.toml
config/: Cargo.toml  container.rs  lib.rs  registry.rs
config/macros/: Cargo.toml  lib.rs
config/tests/: compile_tests.rs  usage.rs
config/tests/cases/: pass-containers.rs  pass-product.rs  pass-simple.rs  pass-sum.rs
export_everywhere/: Cargo.toml  lib.rs
export_everywhere/tests/cases/: fail-missing-extern.rs  fail-missing-extern.stderr  fail-missing-pub.rs  fail-missing-pub.stderr  pass.rs
macros/: Cargo.toml
macros/src/: helpers.rs  lib.rs
src/: demo.rs  lib.rs
tea/: Cargo.toml  errors.rs  lib.rs  types.rs
tea/sqlite/: mod.rs
wtf/: Cargo.toml  thingy.sqlite
wtf-macros/: Cargo.toml
wtf-macros/src/: assoc.rs  entity.rs  helpers.rs  lib.rs
wtf/examples/: demo.rs
wtf/src/: assocs.rs  demo.rs  entities.rs  lib.rs  state.rs
