[package]
name = "namesarehard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "macros" }
proc-macro2 = "1.0.28"
quote = "1.0.9"
rusqlite = "*"
serde = { version = "*", features = ["derive"]}
serde_json = "*"
syn = { version = "1.0.74", features = ["full", "extra-traits"] }
# tea = { path ="repo/src/infra/tea" }
# infuser = { path ="repo/src/infra/infuser" }
thiserror = "*"
postcard = "0.7.2"
chrono = "*"
anyhow = "*"
